--- a/client/index.html
+++ b/client/index.html
@@ -11,22 +11,21 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://unpkg.com/vue"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  
+
 
 </head>
 <body>
   <div id="login">
     <div class="container">
 
-         <nav class="navbar navbar-inverse">
+         <nav class="navbar navbar-default">
            <div class="container-fluid">
             <div class="navbar-header">
                <a class="navbar-brand" href="/">Food Recomendation</a>
             </div>
             <ul class="nav navbar-nav">
                <li class="active"><a href="#">Home</a></li>
-               <li><a href="#">Page 1</a></li>
-               <li><a href="#">Page 2</a></li>
+
             </ul>
             <ul class="nav navbar-nav navbar-right">
                <li><a href="/index.html"><span class="glyphicon glyphicon-user" ></span> Log in </a></li>
@@ -52,11 +51,80 @@
               <input v-model="password" type="password" class="form-control" name="password">
             </div>
             <button v-on:click="onLogin" type="submit" class="btn btn-primary">Submit</button>
+
+            <div class="item">
+              <button class="btn btn-default" onclick="checkLoginState()">Facebook</button>
+            </div>
+
           <!-- </form> -->
         </div>
       </div>
     </div>
   </div>
+
+  <script>
+  function statusChangeCallback(response) {
+    console.log('statusChangeCallback');
+    if (response.status === 'connected') {
+      testAPI();
+    } else {
+      document.getElementById('status').innerHTML = 'Please log ' +
+        'into this app.';
+    }
+  }
+
+  function checkLoginState() {
+    FB.getLoginStatus(function(response) {
+      statusChangeCallback(response);
+    });
+  }
+
+  window.fbAsyncInit = function() {
+  FB.init({
+    appId      : 135815470314546,
+    cookie     : true,  // enable cookies to allow the server to access
+                        // the session
+    xfbml      : true,  // parse social plugins on this page
+    version    : 'v2.8' // use graph api version 2.8
+  });
+
+  FB.getLoginStatus(function(response) {
+    statusChangeCallback(response);
+  });
+
+  };
+
+  (function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/en_US/sdk.js";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));
+
+  function testAPI() {
+    var userID;
+    console.log('Welcome!  Fetching your information.... ');
+
+    FB.api('/me',{fields: 'name, email'}, function(response) {
+      console.log('Successful login for: ' + JSON.stringify(response));
+      localStorage.setItem('responseFb', JSON.stringify(response))
+      var identity = JSON.parse(localStorage.getItem('responseFb'))
+
+      axios.post('http://localhost:3000/users/signinfacebook',{
+        email : identity.email,
+        username : identity.username
+      })
+      .then((result)=>{
+        localStorage.setItem('token', result.data.token)
+      })
+      .catch((err)=>{
+        console.log(err)
+      })
+    });
+  }
+
+  </script>
 
   <script>
     var app = new Vue({
