--- a/client/register.html
+++ b/client/register.html
@@ -16,15 +16,14 @@
 <body>
   <div id="register">
     <div class="container">
-         <nav class="navbar navbar-inverse">
+         <nav class="navbar navbar-default">
            <div class="container-fluid">
             <div class="navbar-header">
                <a class="navbar-brand" href="/">Food Recomendation</a>
             </div>
             <ul class="nav navbar-nav">
                <li class="active"><a href="#">Home</a></li>
-               <li><a href="#">Page 1</a></li>
-               <li><a href="#">Page 2</a></li>
+
             </ul>
             <ul class="nav navbar-nav navbar-right">
                <li><a href="/index.html"><span class="glyphicon glyphicon-user" ></span> Log in </a></li>
